Add header scaling

--- a/radar-header.html
+++ b/radar-header.html
@@ -7,9 +7,10 @@
   }
 
   .radar-header picture img {
-    width: 100%;                     /* Scale image to container width */
-    height: auto;                    /* Maintain aspect ratio */
-    display: block;                  /* Removes bottom whitespace */
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
   }
 </style>
 
