Revise header CSS

--- a/radar-header.html
+++ b/radar-header.html
@@ -2,15 +2,15 @@
   .radar-header {
     padding-bottom: 1rem;
     overflow: hidden;
-    max-width: 800px;
+    max-width: 799px;
     margin: 0 auto;
+    width: 100%;
   }
 
-  .radar-header picture img {
+  .radar-header img {
     width: 100%;
     height: auto;
     display: block;
-    object-fit: contain;
   }
 </style>
 
